--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Space Tourism</title>
   </head>
   <body>
+    <div id="hamburger"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
